Fixed layout issues with sub-pages.  Removed link to delicious.com.  Added link to Twitter: @dmgblog.
git-svn-id: file:///Users/craser/Development/svnroot/KukidoBlog@291 ca067221-1ae6-4d9b-88d4-2c81356bceaf

--- a/WebContent/css/frontpage.css
+++ b/WebContent/css/frontpage.css
@@ -1,3 +1,8 @@
+body {
+	width: 1000px;
+}
+
+
 .sidebar-left {
   float: left;
   width: 180px;
