--- a/WebContent/css/main.css
+++ b/WebContent/css/main.css
@@ -11,7 +11,7 @@ body {
   font-family: HelveticaNeue-condensed, sans-serif;
   color: #222;
   margin: 0px;
-  width: 1000px;
+  width: 800px;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 1em;
@@ -116,9 +116,6 @@ p {
   display: inline;
   list-style-type: none;
   text-transform: lowercase;
-  letter-spacing: -1px;
-  font-family: sans-serif;
-  font-weight: bold;
 }
 
 .sitenav a {
